[package]
name = "open-hypergraphs-dot"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A library for visualizing lax open hypergraphs in GraphViz DOT format"
repository = "https://github.com/statusfailed/open-hypergraphs-dot"
documentation = "https://docs.rs/open-hypergraphs-dot"

[dependencies]
dot-structures = "0.1.1"
graphviz-rust = { version = "0.9.3", optional = true }
open-hypergraphs = "0.2.1"

[features]
default = []
graphviz_rust = ["dep:graphviz-rust"]

[dev-dependencies]
